# lamarkdown

./: .gitignore  404.html  CHANGELOG.md  LICENCE.md  README.md  default_md_build.py  index.html  lamd.py  mkdocs.yml  pymdc  pyproject.toml  setup.cfg  setup.py  todo.txt  tox.ini
api/: index.html
api_tmp/: index.html
core/: index.html
css/: markdown_demo.css
docs/: api.md  api_tmp.md  build_files.md  core.md  index.md  live_updating.md  process.md  tour.md
docs/css/: markdown_demo.css
docs/extensions/: attr_prefix.md  captions.md  cite.md  eval.md  heading_numbers.md  index.md  labels.md  latex.md  list_tables.md  markdown_demo.md  markers.md  sections.md
docs/modules/: code.md  doc.md  index.md  page_numbers.md  plots.md  teaching.md
docs/output_processing/: embedding.md  image_scaling.md  index.md  lists.md  resource_hashing.md
extensions/: index.html
extensions/attr_prefix/: index.html
extensions/captions/: index.html
extensions/cite/: index.html
extensions/eval/: index.html
extensions/labels/: index.html
extensions/latex/: index.html
extensions/list_tables/: index.html
extensions/markdown_demo/: index.html
extensions/sections/: index.html
lamarkdown/: __init__.py  assessment_marks.py  cmd.py  code.py  doc.py  doc_toc.py  lamd.py  live.py  md_compiler.py  page_numbers.py  sec_numbers.py  teaching.py  toc.py
lamarkdown/ext/: attr_prefix.py  captions.py  cite.py  eval.py  heading_numbers.py  labels.py  latex.py  list_tables.py  markdown_demo.py  marker_elements.py  markers.py  pruner.py  pybtex.py  sections.py
lamarkdown/ext/label_support/: counter_types.py  derived_counter_types.py  label_renderers.py  label_templates.py  labellers.py  ref_resolver.py  standard_counter_types.py
lamarkdown/ext/util/: __init__.py  replacement_patterns.py
lamarkdown/lib/: api_impl.py  build_params.py  directives.py  error.py  fenced_blocks.py  image_scaling.py  images.py  lamd.py  lists.py  live.py  md_compiler.py  progress.py  resource_writers.py  resources.py
lamarkdown/mods/: cmd.py  code.py  doc.py  heading_numbers.py  page_numbers.py  plots.py  revealjs.py  teaching.py  toc.py
lamarkdown/pres/: doc.py
lib/: eval.py  latex.py  live.py  md_compiler.py  pruner.py  sectioner.py
modules/: index.html
modules/code/: index.html
modules/doc/: index.html
modules/page_numbers/: index.html
modules/plots/: index.html
modules/teaching/: index.html
search/: search_index.json
tests/: test_eval.py  test_latex.py  test_markers.py
tests/ext/: test_attr_prefix.py  test_captions.py  test_cite.py  test_eval.py  test_heading_numbers.py  test_labels.py  test_latex.py  test_list_tables.py  test_markdown_demo.py  test_markers.py  test_pybtex.py  test_sections.py
tests/ext/label_support/: test_counter_types.py  test_label_templates.py  test_ref_resolver.py
tests/ext/util/: test_pkg.py  test_replacement_patterns.py
tests/lib/: test_api_impl.py  test_build_params.py  test_css.py  test_directives.py  test_fenced_blocks.py  test_image_scaling.py  test_images.py  test_lamd.py  test_live.py  test_md_compiler.py  test_resource_writers.py  test_resources.py
tests/mods/: test_mods.py
tests/util/: hamcrest_elements.py  html_block_processor.py  markdown_ext.py  mock_cache.py  mock_progress.py
tour/: index.html
util/: counter_styles.css  css_counter_convert.py
