[tool.poetry]
name = "lamarkdown"
version = "0.9"
description = "A tool for compiling markdown files into standalone HTML documents, using Python Markdown. Supports Latex (given an existing Tex distribution), custom CSS and JavaScript, multiple document variations from a single source file, and a live output view."
authors = ["David J A Cooper <dave@djac.au>"]
license = "MIT"
readme = "README.md"
repository = "https://bitbucket.org/cooperdja/lamarkdown"
documentation = "https://bitbucket.org/cooperdja/lamarkdown/wiki/Home"
keywords = ["markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown"
]

[tool.poetry.scripts]
lamd = "lamarkdown.lib.lamd:main"

[tool.poetry.dependencies]
python = "^3.7"
markdown = "^3.3.7"
lxml = "^4.9.0"
cssselect = "^1.1.0"
pygments = "^2.12.0"
pymdown-extensions = ">=9"
watchdog = "^2.1.9"
pendulum = "^2.1.2"
diskcache = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
