[metadata]
name = lamarkdown
version = 0.2
description = A tool for compiling markdown files into standalone HTML documents, using Python Markdown. Supports Latex (given an existing Tex distribution), custom CSS and JavaScript, multiple document variations from a single source file, and a live output view.
long_description = file: README.md, LICENCE.md
keywords = markdown
author = David J A Cooper
author_email = david.cooper@curtin.edu.au
license = MIT
url = https://bitbucket.org/cooperdja/lamarkdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Text Processing :: Markup :: Markdown


[options]
python_requires = >=3.7
install_requires =
    markdown
    lxml
    cssselect
    pymdown-extensions
    watchdog
packages =
    lamarkdown
    lamarkdown.lib
    lamarkdown.ext


[options.entry_points]
console_scripts =
    lamd = lamarkdown.lib.lamd:main
# markdown.extensions =
#     lamarkdown.eval = lamarkdown.ext.eval:EvalExtension
#     lamarkdown.latex = lamarkdown.ext.latex:LatexExtension
#     lamarkdown.markers = lamarkdown.ext.markers:MarkersExtension
#     lamarkdown.sections = lamarkdown.ext.sections:SectionsExtension
